--- a/dragons.html
+++ b/dragons.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="dragonstyling.css">
-    <title>Dragons are Real</title>
+    <link rel="stylesheet" href="dragonsstyling.css">
+    <title>Proof of Dragons</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li> <a href="dragons.html">Home</a> </li>
-            <li> <a href="protectionagainstdragons.html">How to Protect Yourself</a> </li>
-            <li> <a href="contactdragons.html"></a> </li>
-        </ul>
-    </nav>
+        <nav>
+            <ul>
+                <li> <a href="dragons.html">Home</a> </li>
+                <li> <a href="dragonhistory.html">History</a> </li>
+                <li> <a href="protectionagainstdragons.html">How to Protect Yourself</a> </li>
+                <li> <a href="dragontraining.html">Training</a> </li>
+                <li> <a href="contactdragons.html">Contacting Dragons</a> </li>
+            </ul>
+        </nav>
+        
         <h1>Proof That Dragons Exist!</h1>  
 
-        <p>This video illustrates that Dragons are really real and dangerouse</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/QI8b34OiOQM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p class="wtext_cent">This video illustrates that Dragons are really real and dangerouse</p>
+        <iframe class="bord" width="560" height="315" src="https://www.youtube.com/embed/QI8b34OiOQM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
 </body>
 </html>
